--- a/styles/index.css
+++ b/styles/index.css
@@ -41,7 +41,6 @@ main {
   padding: 25px;
   border: solid 3px #596a87;
   border-radius: 8px;
-  color: white;
   gap: 20px;
   font-family: "Barlow Semi Condensed", sans-serif;
   font-size: 32px;
@@ -121,27 +120,27 @@ main {
   margin-bottom: 15px;
   position: relative;
 }
-/* 
+
 .content-game label .password-icon {
   display: flex;
   align-items: center;
   position: absolute;
   top: 20%;
-  right: 25px;
-
+  right: 5px;
+  cursor: pointer;
   width: 20px;
-  color: #f9f9f9;
+  color: #1e3756;
   transition: all 0.2s;
 }
 
-label .password-icon:hover {
-  cursor: pointer;
-  color: #ff4754;
+label .password-icon .fa-eye {
+  position: absolute;
+  margin-top: 15px;
 }
 
-label .password-icon {
+label .password-icon .fa-eye-slash {
   display: none;
-} */
+}
 
 .content-game input {
   width: 340px;
