--- a/styles/override.css
+++ b/styles/override.css
@@ -1,7 +1,14 @@
 .swal2-container .swal2-icon-error .swal2-confirm {
   background-color: #de3650;
+  box-shadow: none;
 }
 
 .swal2-container .swal2-icon-success .swal2-confirm {
   background-color: #e0a43c;
+  box-shadow: none;
+}
+
+.swal2-container .swal2-icon-info .swal2-confirm {
+  background-color: #192647;
+  box-shadow: none;
 }
